/**
 * Physical world for performing a physical operation
 * Receive a list of entities and apply a physical operation
 * @classdesc Physical world for performing a physical operation
 */
class PhysicalWorld {

}